"Updated jupyter notebook."

--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -151,9 +151,8 @@
     "\n",
     "// Loading the compiled MathBox bundle.\n",
     "require.config({\n",
-    "    urlArgs: \"\", // Make suffix empty\n",
     "    paths: {\n",
-    "        mathBox: '../master/static/mathbox/build/mathbox-bundle'\n",
+    "        mathBox: '//cdn.rawgit.com/unconed/mathbox/eaeb8e15/build/mathbox-bundle'\n",
     "    }\n",
     "});\n",
     "\n",
