"Updated examples to test compatibility with nbviewer."

--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -140,12 +140,13 @@
        "<IPython.core.display.Javascript object>"
       ]
      },
+     "execution_count": 0,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%javascript\n",
+    "%%javascript notebook\n",
     "\n",
     "// window.location.reload(true)\n",
     "\n",
@@ -221,7 +222,7 @@
     }
    ],
    "source": [
-    "%%javascript\n",
+    "%%javascript notebook\n",
     "with_mathbox(element, function(mathbox) {\n",
     "    \n",
     "    var view = mathbox.cartesian({},{rotation:(t)=>[0, t*0.02, 0]})\n",
